tests/errors/trait-drop-missing-method.ari
impl Drop for i64 {
}

fn main() -> i64 {
  return 0;
}
